<resources>
    <string name="app_name">Photomaps</string>
    <string name="title_activity_custom_photomap">CustomPhotomap</string>
    <string name="create_a_custom_photomap">Create a custom Photomap, made of images you choose. These can be saved and shared with friends.</string>
    <string name="places_photomaps">See Photomaps in action. Select a Photomap showing well known landmarks in cities like New York, Paris, London and Sydney.</string>
    <string name="saved_photomaps">View previously saved Photomaps you have created.</string>
    <string name="add_to_map">Add to map</string>
    <string name="add_timeline">Add timeline</string>
    <string name="remove_timeline">Remove timeline</string>
    <string name="clear_photomap">Clear photomap</string>
    <string name="share">Share</string>
    <string name="browsePlaces">Browse Places</string>
    <string name="create">Create a photomap</string>
    <string name="saved_title">Saved Photomaps</string>
    <string name="savedButton">Browse your saved Photomaps</string>
    <string name="places_title">Places</string>
    <string name="button_create">Create</string>
    <string name="custom_photomap_title">Custom Photomaps</string>
    <string name="save_photomap">Save Photomap</string>
    <string name="view_in_maps">View In Maps</string>
    <string name="close">Close</string>
    <string name="date_taken">Date Taken:</string>
    <string name="time_taken">Time Taken:</string>
    <string name="address">Address:</string>
    <string name="loading">Loading…</string>
    <string name="description">Description:</string>
    <string name="get_creating">There are saved maps yet, get creating! Your saved maps will appear here.</string>
    <string name="londondesc">Explore London landmarks like the Tower of London, the London Eye and Westminster Parliament house.</string>
    <string name="sydneyDesc">Explore Sydney landmarks like the Opera House, Harbour bridge and the State Parliament.</string>
    <string name="sydney">Sydney</string>
    <string name="london">London</string>
    <string name="newyorkDesc">Explore landmarks from New York, like the Empire State building, Statue of Liberty and One World Trade Centre.</string>
    <string name="newYork">New York</string>
    <string name="australiaDesc">Explore Australia\'s rich culture of having unnecessarily big objects in small rural towns.</string>
    <string name="ausBig">Australia Big Things</string>
    <string name="worldDesc">Explore well known landmarks from all over the world!</string>
    <string name="world">World Landmarks</string>
    <string name="downloadPlace">Download Place</string>
    <string name="read_more">Read More</string>
</resources>
