<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/main_photomap_option"
        android:icon="@drawable/ic_plus_symbol"
        />

    <item
        android:id="@+id/add_files_option"
        android:icon="@drawable/ic_perm_media"
        android:title="@string/add_to_map"
        />

    <item
        android:id="@+id/add_timeline_option"
        android:icon="@drawable/ic_action_addtimeline"
        android:title="@string/add_timeline"
        />

    <item
        android:id="@+id/remove_timeline_option"
        android:icon="@drawable/ic_action_cleartimeline"
        android:title="@string/remove_timeline"
        />

    <item
        android:id="@+id/clear_map_option"
        android:icon="@drawable/ic_delete_action"
        android:title="@string/clear_photomap"
        />

    <item
        android:id="@+id/share_map_option"
        android:icon="@drawable/ic_action_share"
        android:title="@string/share"
        />

</menu>