<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.alecforbes.photomapapp.Activities.MainActivity">

    <ScrollView
        android:id="@+id/mainScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/mainLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/createPhotomapButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="centerInside"
                android:padding="0dp"
                app:srcCompat="@mipmap/main_placeholder" />

            <TextView
                android:id="@+id/createPhotomapText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_a_custom_photomap" />

            <ImageButton
                android:id="@+id/placesPhotomapButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="centerInside"
                app:srcCompat="@mipmap/newyorkmain" />

            <TextView
                android:id="@+id/placesText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/places_photomaps" />

            <ImageButton
                android:id="@+id/savedPhotomapsButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="centerInside"
                app:srcCompat="@mipmap/main_placeholder" />

            <TextView
                android:id="@+id/savedPhotomapsText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/saved_photomaps" />
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
